# PythonTemplate

./: pyproject.toml
src/: README.md
src/new_package/: package.py
test/: test_new_package.py
