[tool.poetry]
name = "new_package"
version = "0.1.0"
description = ""
authors = ["Jannetta Steyn <6432530+jsteyn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
